# serializer version: 1
# name: test_dashboard__render_layout
  '''
  }{<hr /><div class="span-6 ">
    <div class="span-6 ">
    
  
  
      
          <div id="component-dashapp1testdashboardcomponentcomponent_1-inner" class="dashboard-component-inner fade-in">
              
  value
  
          </div>
      
  
  
  
  </div><div class="span-6 ">
    
  
  
      <div hx-get="/dash/app1/testdashboard/@component/component_2/"
           hx-trigger="intersect once delay:1ms">
          <div class="htmx-indicator">
              
  <div class="loading-img">
      <img src="/static/dashboards/loading.svg" />
  </div>
          </div>
      </div>
  
  
  
  </div>
  </div>
  '''
# ---
# name: test_header__render
  '<h2>some text....</h2>'
# ---
# name: test_html__render
  'some text....'
# ---
# name: test_html_component__card__css_classes
  '''
  <div class="span-6">
    <div class="css_class">
      
      
      <div>
        
  
  
      
          <div id="component-dashapp1testdashboardcomponentcomponent_1-inner" class="dashboard-component-inner fade-in">
              
  value
  
          </div>
      
  
  
  
      </div>
      
    </div>
  </div>
  '''
# ---
# name: test_html_component__div__css_classes
  '''
  <div class="span-6 css_class">
    
  
  
      
          <div id="component-dashapp1testdashboardcomponentcomponent_1-inner" class="dashboard-component-inner fade-in">
              
  value
  
          </div>
      
  
  
  
  </div>
  '''
# ---
# name: test_html_component__render[Card]
  '''
  <div class="span-6">
    <div class="card">
      
      
      <div>
        
  
  
      
          <div id="component-dashapp1testdashboardcomponentcomponent_1-inner" class="dashboard-component-inner fade-in">
              
  value
  
          </div>
      
  
  
  
      </div>
      
    </div>
  </div>
  '''
# ---
# name: test_html_component__render[Div]
  '''
  <div class="span-6 ">
    
  
  
      
          <div id="component-dashapp1testdashboardcomponentcomponent_1-inner" class="dashboard-component-inner fade-in">
              
  value
  
          </div>
      
  
  
  
  </div>
  '''
# ---
# name: test_html_component__render[Tab]
  '''
  <div :class="{ ' active show': tab === 'component_1' }" x-show="tab === 'component_1'">
      
  </div>
  '''
# ---
# name: test_html_component__tab__css_classes
  '''
  <div :class="{ 'css_class active show': tab === 'component_1' }" x-show="tab === 'component_1'">
      
  </div>
  '''
# ---
# name: test_html_component__tabcontainer__css_classes
  '''
  <div class="span-6 css_class" x-data="{ tab: 'component_1' }">
      <div id="" class="tabs" >
          <div class="tab">
    <a :class="{ 'active': tab === 'component_1' }" x-on:click.prevent="tab = 'component_1'" href="#" class="">
      component_1
    </a>
  </div>
      </div>
      <hr>
      <div class="tab-content">
          <div :class="{ ' active show': tab === 'component_1' }" x-show="tab === 'component_1'">
      
  </div>
      </div>
  </div>
  '''
# ---
# name: test_layout_component__render
  '''
  
  
  
      
          <div id="component-dashapp1testdashboardcomponentcomponent_1-inner" class="dashboard-component-inner fade-in">
              
  value
  
          </div>
      
  
  
  
  
  
      <div hx-get="/dash/app1/testdashboard/@component/component_2/"
           hx-trigger="intersect once delay:1ms">
          <div class="htmx-indicator">
              
  <div class="loading-img">
      <img src="/static/dashboards/loading.svg" />
  </div>
          </div>
      </div>
  
  
  
  '''
# ---
# name: test_layout_component__unknown_component_ignored
  '''
  
  
  
      
          <div id="component-dashapp1testdashboardcomponentcomponent_1-inner" class="dashboard-component-inner fade-in">
              
  value
  
          </div>
      
  
  
  
  
  
      <div hx-get="/dash/app1/testdashboard/@component/component_2/"
           hx-trigger="intersect once delay:1ms">
          <div class="htmx-indicator">
              
  <div class="loading-img">
      <img src="/static/dashboards/loading.svg" />
  </div>
          </div>
      </div>
  
  
  
  
  
      
          <div id="component-dashapp1testdashboardcomponentcomponent_3-inner" class="dashboard-component-inner fade-in">
              
  value from callable
  
          </div>
      
  
  
  
  '''
# ---
# name: test_tab_container__render
  '''
  <div class="span-6 tab-container" x-data="{ tab: 'htmlhtmlsome-text' }">
      <div id="" class="tabs" >
          <div class="tab">
    <a :class="{ 'active': tab === 'htmlhtmlsome-text' }" x-on:click.prevent="tab = 'htmlhtmlsome-text'" href="#" class="">
      HTML(html=&#x27;some text....&#x27;)
    </a>
  </div>
      </div>
      <hr>
      <div class="tab-content">
          <div :class="{ ' active show': tab === 'htmlhtmlsome-text' }" x-show="tab === 'htmlhtmlsome-text'">
      
  </div>
      </div>
  </div>
  '''
# ---
